# temu-automation

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts  worker.mjs
.claude/: plan.md
automation/: ai-runtime.mjs  browser.mjs  env-loader.mjs  gemini-client.mjs  http-json.mjs  package.json  runtime-config.mjs  scrape-registry.mjs  start-worker.cmd  title-optimizer.mjs  worker-entry.cjs  worker.mjs  yunqi-db.mjs  yunqi-online.mjs
automation/src/: index.ts
deploy/static-update-site/: README.md  index.html
docs/: colleague-user-guide.md  runtime-architecture.md  static-update-site-template.md  update-publishing.md  update-source-options.md  v0.1.84-update-guide.md  v0.1.85-update-guide.md  windows-distribution.md
docs/plans/: 2026-03-29-electron-convergence-design.md  2026-03-29-stabilization-design.md  2026-03-31-stability-remediation-plan.md
electron/: default-credentials.cjs  main.cjs  preload.cjs
scripts/: call_worker.ps1  check_ai_ports.ps1  debug_ai_runtime.cmd  generate_brand_assets.py  prepare-node-runtime.cjs  prepare_image_studio_bundle.py  prepare_static_update_site.py  search_file.ps1  show_slice.ps1  smoke-desktop.cjs  start_repack_desktop.cmd  start_worker_port.ps1  test-desktop-regression.cjs  test-grsai-image-gen.cjs  verify-data-contracts.ts  verify-release-prereqs.cjs  verify_ai_runtime.cjs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  README.md  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: account.rs  config.rs
src-tauri/src/db/: mod.rs
src/components/: StatCard.tsx  (+5 more)
(+50 files in other folders)
